--- a/src/main/resources/templates/users/goals.html
+++ b/src/main/resources/templates/users/goals.html
@@ -29,10 +29,10 @@
     <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
 
     <div class="container p-4 my-5 rounded bg-light" >
-      <div class="navbar bg-body-tertiary d-flex justify-content-between pe-3 row">
-        <span class="h2 me-auto ms-3 col text-center" style="color: #3c5aa6">Manage Goals</span>
+      <div class="navbar bg-body-tertiary">
+          <span class="h2 me-auto ms-3"><i class="bi bi-person-badge me-3"></i>Manage Goals</span>
           <!-- Button trigger modal -->
-          <button type="button" class="btn blueToYellow col" data-bs-toggle="modal" data-bs-target="#createGoalModal" style="width: 100px;">
+          <button type="button" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#createGoalModal">
               <i class="bi bi-plus-square"></i>&nbsp;&nbsp;
               Create Goal
           </button>
