all pages formatted

--- a/src/main/resources/templates/admin/path/createapitest.html
+++ b/src/main/resources/templates/admin/path/createapitest.html
@@ -24,14 +24,14 @@
     </style>
 </head>
 
-<body style="background-color: #3c5aa6">
+<body>
 
     <!-- Navbar -->
     <th:block th:replace="~{/fragments/navbar.html :: navbar}"/>
 
     <div class="container">
 
-        <div class="row p-4 dots rounded my-5">
+        <div class="row p-4 bg-light rounded my-5">
 
             <!-- Img Side -->
             <div class="col col-md-12 col-lg-6 d-flex justify-content-center align-items-center">
