--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,19 +10,17 @@
 </head>
 
 <style>
-  .hexBg {
-    background-image: url("/img/hex.png");
-  }
+
 </style>
 
-<body style="background-color: #3c5aa6">
+<body>
 
 <!-- Navbar -->
 <th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>
 
-<div class="container mt-5">
+<div class="container my-5 bg-light rounded">
 
-  <div class="row hexBg p-5 rounded my-5 d-flex justify-content-center">
+  <div class="row p-5 rounded my-5 d-flex justify-content-center">
     <div class="col-lg-6 d-flex justify-content-center align-items-center">
       <img src="/img/register.webp" class="rounded" style="width: 100%">
     </div>
