--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -6,13 +6,11 @@
     <title>Admin Panel</title>
     <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
     <style>
-        .hexBg {
-            background-image: url("/img/hex.png");
-        }
+
     </style>
 </head>
 
-    <body class="hexBg p-3">
+    <body>
     <!-- Navbar -->
         <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
 
