--- a/src/main/resources/templates/admin/path/edit.html
+++ b/src/main/resources/templates/admin/path/edit.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 <th:block th:replace="~{/fragments/navbar.html :: navbar}"/>
-<div class="container">
+
+
+<div class="container bg-light rounded my-5">
   <div class="navbar bg-body-tertiary">
     <a href="/admin/index">
       <button class="btn btn-light ms-3">
