--- a/src/main/resources/templates/users/paths.html
+++ b/src/main/resources/templates/users/paths.html
@@ -5,24 +5,19 @@
   <title>All Paths</title>
   <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
     <style>
-        .hexBg {
-            background-image: url("/img/hex.png");
-        }
-        .transBg {
-            background-color: rgba(255,255,255,.65);
-        }
+
     </style>
 </head>
 
-<body style="background-color: #3c5aa6">
+<body>
 <!-- Navbar -->
 <th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
 
-<div class="container">
+<div class="container bg-light rounded">
 
-    <div class="d-flex justify-content-center row hexBg rounded my-5 p-3">
-        <h2 class="text-center transBg mb-0 pt-2 rounded-top">Welcome to Paths</h2>
-        <div th:each="path : ${paths}" class="d-flex transBg justify-content-center col-lg-3 col-md-4 col-sm-6 p-3">
+    <div class="d-flex justify-content-center row  rounded my-5 p-3">
+        <h2 class="mb-0 pt-2">Paths</h2>
+        <div th:each="path : ${paths}" class="d-flex justify-content-center col-lg-3 col-md-4 col-sm-6 p-3">
             <a th:href="@{/paths/{id} (id=${path.id})}">
                 <div class="card text-center" style="width: 12rem;">
                     <img th:src="'data:image/jpeg;base64,'+${path.getImageDataUrl()}" class="card-img-top" alt="Achievement Badge" width="128px" height="128px">
