--- a/src/main/resources/templates/fragments/chat.html
+++ b/src/main/resources/templates/fragments/chat.html
@@ -19,7 +19,7 @@
         </div>
       </div>
     </div>
-    <i id="chat_icon" class="bi bi-chat-right-dots"></i>
+    <i id="chat_icon" class="bi bi-chat-right-heart-fill"></i>
     <script src="/js/chat.js" type="module" defer></script>
   </th:block>
 </html>
