--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -179,56 +179,56 @@
         </div>
     </div>
 
-    <!-- High Score Section -->
-    <h4 class="leaderboard text-center mt-5">High Scores!</h4>
-    <hr class="p-1 rounded" style="color: black;">
-    <div class="row mb-5">
-        <!-- Week High Score -->
-        <div class="col m-1 d-flex justify-content-center align-items-center">
-            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">
-                <div class="card-header">
-                    <h5 class="text-center m-0" style="color: #849324">This Week</h5>
-                </div>
-                <div class="card-body" style="background-color: #849324">
-                    <div id="typewriter1" class="py-2"></div>
-                    <div id="typewriter2" class="py-2"></div>
-                    <div id="typewriter3" class="py-2"></div>
-                    <div id="typewriter4" class="py-2"></div>
-                </div>
-            </div>
-        </div>
-        <!-- Month High Score -->
-        <div class="col m-1 d-flex justify-content-center align-items-center">
-            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">
-                <div class="card-header">
-                    <h5 class="text-center m-0" style="color:  #849324">This Month</h5>
-                </div>
-                <div class="card-body" style="background-color: #849324">
-                    <div id="typewriter5" class="py-2"></div>
-                    <div id="typewriter6" class="py-2"></div>
-                    <div id="typewriter7" class="py-2"></div>
-                    <div id="typewriter8" class="py-2"></div>
-                </div>
-            </div>
-        </div>
-        <!-- All Time High Score -->
-        <div class="col m-1 d-flex justify-content-center align-items-center">
-            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">
-                <div class="card-header">
-                    <h5 class="text-center m-0" style="color:  #849324">All Time</h5>
-                </div>
-                <div class="card-body" style="background-color: #849324">
-                    <div id="typewriter9" class="py-2"></div>
-                    <div id="typewriter10" class="py-2"></div>
-                    <div id="typewriter11" class="py-2"></div>
-                    <div id="typewriter12" class="py-2"></div>
-                </div>
-            </div>
-        </div>
-    </div>
+<!--    &lt;!&ndash; High Score Section &ndash;&gt;-->
+<!--    <h4 class="leaderboard text-center mt-5">High Scores!</h4>-->
+<!--    <hr class="p-1 rounded" style="color: black;">-->
+<!--    <div class="row mb-5">-->
+<!--        &lt;!&ndash; Week High Score &ndash;&gt;-->
+<!--        <div class="col m-1 d-flex justify-content-center align-items-center">-->
+<!--            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">-->
+<!--                <div class="card-header">-->
+<!--                    <h5 class="text-center m-0" style="color: #849324">This Week</h5>-->
+<!--                </div>-->
+<!--                <div class="card-body" style="background-color: #849324">-->
+<!--                    <div id="typewriter1" class="py-2"></div>-->
+<!--                    <div id="typewriter2" class="py-2"></div>-->
+<!--                    <div id="typewriter3" class="py-2"></div>-->
+<!--                    <div id="typewriter4" class="py-2"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; Month High Score &ndash;&gt;-->
+<!--        <div class="col m-1 d-flex justify-content-center align-items-center">-->
+<!--            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">-->
+<!--                <div class="card-header">-->
+<!--                    <h5 class="text-center m-0" style="color:  #849324">This Month</h5>-->
+<!--                </div>-->
+<!--                <div class="card-body" style="background-color: #849324">-->
+<!--                    <div id="typewriter5" class="py-2"></div>-->
+<!--                    <div id="typewriter6" class="py-2"></div>-->
+<!--                    <div id="typewriter7" class="py-2"></div>-->
+<!--                    <div id="typewriter8" class="py-2"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        &lt;!&ndash; All Time High Score &ndash;&gt;-->
+<!--        <div class="col m-1 d-flex justify-content-center align-items-center">-->
+<!--            <div class="card highScore bg-dark border border-5 border-dark" style="width: 18rem;">-->
+<!--                <div class="card-header">-->
+<!--                    <h5 class="text-center m-0" style="color:  #849324">All Time</h5>-->
+<!--                </div>-->
+<!--                <div class="card-body" style="background-color: #849324">-->
+<!--                    <div id="typewriter9" class="py-2"></div>-->
+<!--                    <div id="typewriter10" class="py-2"></div>-->
+<!--                    <div id="typewriter11" class="py-2"></div>-->
+<!--                    <div id="typewriter12" class="py-2"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <!-- Tutorial Modals -->
-    <div class="modal" id="howTo1" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+    <div class="modal fade" id="howTo1" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
