--- a/src/main/resources/templates/users/landing.html
+++ b/src/main/resources/templates/users/landing.html
@@ -61,7 +61,7 @@
         </th:block>
     </div>
 
-    <th:block th:replace="~{/fragments/chat.html :: main_chat}"/>
+<!--    <th:block th:replace="~{/fragments/chat.html :: main_chat}"/>-->
 
 
 </div>
