--- a/src/main/resources/templates/users/landing.html
+++ b/src/main/resources/templates/users/landing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/html" xmlns:sec="" lang="en">
+<html  xmlns:th="http://www.thymeleaf.org"
+       xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Users Panel</title>
@@ -61,9 +61,7 @@
         </th:block>
     </div>
 
-<!--    <th:block th:replace="~{/fragments/chat.html :: main_chat}"/>-->
-
-
+    <th:block th:replace="~{/fragments/chat.html :: main_chat}"/>
 </div>
 <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
 </body>
