--- a/src/main/resources/templates/users/landing.html
+++ b/src/main/resources/templates/users/landing.html
@@ -4,65 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <title>Users Panel</title>
-    <th:block th:replace="~{/fragments/header.html :: header}"></th:block>
+<!--    <th:block th:replace="~{/fragments/header.html :: header}"></th:block>-->
 </head>
 <body>
-<th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>
+<!--<th:block th:replace="~{/fragments/navbar.html :: navbar}"></th:block>-->
+<h1>Thymeleaf is breaking everything!</h1>
 
+<!--<div class="container p-3 text-black rounded my-5 bg-white">-->
+<!--    <div class="navbar d-flex justify-content-end pe-3">-->
+<!--        <span class="h2 me-auto ms-3"><i class="bi bi-person-badge me-3"></i>Profile</span>-->
+<!--        <a href="/profile/settings" class="btn btn-light" style="float: right;">-->
+<!--            <i class="bi bi-gear me-3"></i>Profile Settings-->
+<!--        </a>-->
+<!--    </div>-->
+<!--    <div class="row" style="padding-top: 50px">-->
+<!--        <div class="h6 ps-3">-->
+<!--            <span th:unless="${user.lastName == null or user.firstName == null}" th:text="${user.firstName + ' ' + user.lastName + ' (aka. ' + user.username + ')'}"/>-->
+<!--            <span th:if="${user.lastName == null or user.firstName == null}">What's your name? <a href="/profile/settings">Set Now</a></span>-->
 
-<div class="container p-3 text-black rounded my-5 bg-white">
-    <div class="navbar d-flex justify-content-end pe-3">
-        <span class="h2 me-auto ms-3"><i class="bi bi-person-badge me-3"></i>Profile</span>
-        <a href="/profile/settings" class="btn btn-light" style="float: right;">
-            <i class="bi bi-gear me-3"></i>Profile Settings
-        </a>
-    </div>
-    <div class="row" style="padding-top: 50px">
-        <div class="h6 ps-3">
-            <span th:unless="${user.lastName == null or user.firstName == null}" th:text="${user.firstName + ' ' + user.lastName + ' (aka. ' + user.username + ')'}"/>
-            <span th:if="${user.lastName == null or user.firstName == null}">What's your name? <a href="/profile/settings">Set Now</a></span>
+<!--            &lt;!&ndash;If the user hasn't set their first and last name then display their username&ndash;&gt;-->
+<!--            <span th:if="${user.lastName == null or user.firstName == null}" th:text="${user.username}"></span>-->
 
-            <!--If the user hasn't set their first and last name then display their username-->
-            <span th:if="${user.lastName == null or user.firstName == null}" th:text="${user.username}"></span>
+<!--            &lt;!&ndash; Points section &ndash;&gt;-->
+<!--            <span th:unless="${user.totalPoints == null}" th:text="' | Total Health Points: ' + ${user.totalPoints}" />-->
+<!--        </div>-->
 
-            <!-- Points section -->
-            <span th:unless="${user.totalPoints == null}" th:text="' | Total Health Points: ' + ${user.totalPoints}" />
-        </div>
+<!--        &lt;!&ndash; Profile image &ndash;&gt;-->
+<!--        <div class="col-12 col-md-3">-->
+<!--            <img id="profile_image" th:src="'data:image/jpeg;base64,' + ${user.profileImageDataUrl}" class="img-thumbnail" alt="Profile Image">-->
+<!--        </div>-->
 
-        <!-- Profile image -->
-        <div class="col-12 col-md-3">
-            <img id="profile_image" th:src="'data:image/jpeg;base64,' + ${user.profileImageDataUrl}" class="img-thumbnail" alt="Profile Image">
-        </div>
+<!--        &lt;!&ndash; Bio Section &ndash;&gt;-->
+<!--        <div class="col-12 col-md-9 mt-3">-->
+<!--            &lt;!&ndash; Set profile bio section &ndash;&gt;-->
+<!--            <div id="profile_description" th:text="${user.bio}"/>-->
 
-        <!-- Bio Section -->
-        <div class="col-12 col-md-9 mt-3">
-            <!-- Set profile bio section -->
-            <div id="profile_description" th:text="${user.bio}"/>
+<!--            &lt;!&ndash;If their bio is not set yet, &ndash;&gt;-->
+<!--            <th:block th:if="${user.bio == null}">-->
+<!--                You can write your bio in the Profile Settings tab.-->
+<!--            </th:block>-->
+<!--        </div>-->
+<!--    </div>-->
 
-            <!--If their bio is not set yet, -->
-            <th:block th:if="${user.bio == null}">
-                You can write your bio in the Profile Settings tab.
-            </th:block>
-        </div>
-    </div>
+<!--    <div class="container" th:if="${user.followed_paths != null}">-->
+<!--        <h4 class="mt-3">Chosen Paths</h4>-->
+<!--        <ul class="list-group mt-3" style="clear: both;">-->
+<!--            <li class="list-group-item" th:each="item : ${user.followed_paths}" >-->
+<!--                <img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl}"/>-->
+<!--                <span class="me-auto"><strong th:text="${item.title}"></strong></span>-->
+<!--                <i class="bi bi-trash3-fill deleteBtn btn btn-warning ms-auto"   th:item="${item.getId()}" style="float: right;"></i>-->
+<!--            </li>-->
+<!--            <li class="list-group-item" th:if="${user.followed_paths == null}"><i class="bi bi-info-square me-3"></i>You can find paths to follow in the "All Paths" tab.</li>-->
+<!--        </ul>-->
+<!--        <th:block th:if="${user.followed_paths.isEmpty()}">-->
+<!--            <i class="bi bi-info-square me-4"></i>You are not following any paths, would you like to <a href="/allPaths">search</a> for one?-->
+<!--        </th:block>-->
+<!--    </div>-->
 
-    <div class="container" th:if="${user.followed_paths != null}">
-        <h4 class="mt-3">Chosen Paths</h4>
-        <ul class="list-group mt-3" style="clear: both;">
-            <li class="list-group-item" th:each="item : ${user.followed_paths}" >
-                <img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl}"/>
-                <span class="me-auto"><strong th:text="${item.title}"></strong></span>
-                <i class="bi bi-trash3-fill deleteBtn btn btn-warning ms-auto"   th:item="${item.getId()}" style="float: right;"></i>
-            </li>
-            <li class="list-group-item" th:if="${user.followed_paths == null}"><i class="bi bi-info-square me-3"></i>You can find paths to follow in the "All Paths" tab.</li>
-        </ul>
-        <th:block th:if="${user.followed_paths.isEmpty()}">
-            <i class="bi bi-info-square me-4"></i>You are not following any paths, would you like to <a href="/allPaths">search</a> for one?
-        </th:block>
-    </div>
-
-    <th:block th:replace="~{/fragments/chat.html :: main_chat}"/>
-</div>
-<th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+<!--    <th:block th:replace="~{/fragments/chat.html :: main_chat}"/>-->
+<!--</div>-->
+<!--<th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>-->
 </body>
 </html>
