--- a/src/main/resources/templates/recover.html
+++ b/src/main/resources/templates/recover.html
@@ -16,7 +16,7 @@
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 </head>
 <body>
-  <th:block th:replace="~{/fragments/navbar.html :: navbar}"/>
+  <th:block th:replace="~{fragments/navbar.html :: navbar}"/>
   <div class="container d-flex flex-column justify-content-center align-items-center" style="height: 80vh;">
       <div class="">
           <img src="/img/logo.svg" class="mb-4 img-fluid"/>
@@ -53,7 +53,7 @@
           </div>
       </div>
   </div>
-  <th:block th:replace="~{/fragments/footer.html :: footer}"></th:block>
+  <th:block th:replace="~{fragments/footer.html :: footer}"></th:block>
   <script>
       const urlSearchParams = new URLSearchParams(window.location.search);
       const params = Object.fromEntries(urlSearchParams.entries());
