--- a/src/main/resources/templates/recover.html
+++ b/src/main/resources/templates/recover.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Recover Account</title>
-    <th:block th:replace="~{/fragments/header.html :: header}"/>
+    <th:block th:replace="~{fragments/header.html :: header}"/>
     <style>
         /*.logo{*/
         /*    background-size: contain;*/
