--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/html">
+
 <th:block th:fragment="header">
   <meta charset="UTF-8">
   <title>HealthPointsFitness</title>
@@ -19,4 +22,5 @@
   <link rel="stylesheet" href="/css/chat.css">
   <link href="/css/main.css" rel="stylesheet">
 </th:block>
+
 </html>
