changed recover page routes for testing

--- a/src/main/resources/templates/users/landing.html
+++ b/src/main/resources/templates/users/landing.html
@@ -60,7 +60,7 @@
         </th:block>
     </div>
 
-    <th:block th:replace="~{fragments/chat.html :: main_chat}"/>
+<!--    <th:block th:replace="~{fragments/chat.html :: main_chat}"/>-->
 </div>
 <th:block th:replace="~{fragments/footer.html :: footer}"></th:block>
 </body>
